--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,7 +29,7 @@ jobs:
   lint-prettier:
     uses: timmo001/workflows/.github/workflows/lint-prettier.yml@master
     with:
-      file-types: "{json,yml,yaml}"
+      file-types: "{json,yml}"
   lint-pylint:
     uses: timmo001/workflows/.github/workflows/lint-pylint.yml@master
     with:
