Install gui requirements

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,5 +18,8 @@ jobs:
     with:
       module-name: systembridgegui
       pre-install-command: |
+        sudo apt update
+        sudo apt install libegl-dev libpulse0
+        pip install --upgrade --pre systembridgeshared
         pip install .
       use-incremental: true
