--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ aiohttp==3.9.0b0;python_version>='3.12'
 incremental==22.10.0
 pyperclip==1.8.2
 PySide6==6.6.0
+systembridgemodels==3.9.1
 systembridgeshared==3.9.0
 typer==0.9.0
