--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ aiohttp==3.9.0b1;python_version>='3.12'
 incremental==22.10.0
 pyperclip==1.8.2
 PySide6==6.6.0
-systembridgeshared==3.10.4
+systembridgeshared>=3.10.5
 typer==0.9.0
