--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,7 +61,6 @@ disable = [
     "format",
     "inconsistent-return-statements",
     "locally-disabled",
-    "no-name-in-module",
     "not-context-manager",
     "too-few-public-methods",
     "too-many-ancestors",
@@ -81,6 +80,10 @@ enable = [
     #"useless-suppression",  # temporarily every now and then to clean them up
     "use-symbolic-message-instead",
 ]
+
+[tool.isort]
+profile = "black"
+line_length = 88
 
 [tool.pylint.REPORTS]
 score = false
@@ -194,12 +197,6 @@ ignore = [
 
 [tool.ruff.flake8-import-conventions.extend-aliases]
 voluptuous = "vol"
-"homeassistant.helpers.area_registry" = "ar"
-"homeassistant.helpers.config_validation" = "cv"
-"homeassistant.helpers.device_registry" = "dr"
-"homeassistant.helpers.entity_registry" = "er"
-"homeassistant.helpers.issue_registry" = "ir"
-"homeassistant.util.dt" = "dt_util"
 
 [tool.ruff.flake8-pytest-style]
 fixture-parentheses = false
@@ -211,7 +208,14 @@ fixture-parentheses = false
 [tool.ruff.isort]
 force-sort-within-sections = true
 known-first-party = [
-    "homeassistant",
+    "systembridgebackend",
+    "systembridgecli",
+    "systembridgeconnector",
+    "systembridgefrontend",
+    "systembridgegui",
+    "systembridgemodels",
+    "systembridgeshared",
+    "systembridgewindowssensors",
 ]
 combine-as-imports = true
 split-on-trailing-comma = false
@@ -219,8 +223,6 @@ split-on-trailing-comma = false
 [tool.ruff.per-file-ignores]
 
 # Allow for main entry & scripts to write to stdout
-"homeassistant/__main__.py" = ["T201"]
-"homeassistant/scripts/*" = ["T201"]
 "script/*" = ["T20"]
 
 [tool.ruff.mccabe]
