--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,10 @@ jobs:
           python-version: "3.12"
           architecture: "x64"
           cache: "pip"
+      - name: 🏗 Install libegl-dev, libpulse0
+        run: |
+          sudo apt update
+          sudo apt install libegl-dev libpulse0
       - name: 🏗 Install setuptools, wheel, twine, click, twisted, incremental
         run: |
           python -m pip install --upgrade setuptools wheel twine click twisted incremental
