--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,8 +14,9 @@ tauri-build = { version = "2.0.0-beta", features = [] }
 reqwest = "0.11.26"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tauri = { version = "2.0.0-beta", features = [] }
+tauri = { version = "2.0.0-beta", features = ["tray-icon"] }
 tauri-plugin-autostart = "2.0.0-beta.2"
 tauri-plugin-clipboard-manager = "2.0.0-beta.2"
 tauri-plugin-shell = "2.0.0-beta"
+tauri-plugin-updater = "2.0.0-beta.2"
 tokio = { version = "1.36.0", features = ["full"] }
