--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,6 +11,7 @@ edition = "2021"
 tauri-build = { version = "2.0.0-beta", features = [] }
 
 [dependencies]
+psutil = { version = "3.3.0", default-features = false, features = ["process"] }
 reqwest = "0.11.26"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
