--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,10 +11,10 @@ edition = "2021"
 tauri-build = { version = "2.0.0-beta", features = [] }
 
 [dependencies]
-psutil = { version = "3.3.0", default-features = false, features = ["process"] }
 reqwest = "0.11.26"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+sysinfo = "0.30.7"
 tauri = { version = "2.0.0-beta", features = ["tray-icon"] }
 tauri-plugin-autostart = "2.0.0-beta.2"
 tauri-plugin-clipboard-manager = "2.0.0-beta.2"
