--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -23,5 +23,5 @@ permissions:
   security-events: write
 
 jobs:
-  codeql-analyze-python:
-    uses: timmo001/workflows/.github/workflows/codeql-python.yml@master
+  codeql-analyze-rust:
+    uses: timmo001/workflows/.github/workflows/codeql-rust.yml@master
